# src/lib/server/http.ts
@@ -1,7 +1,7 @@
 export const CORS = {
   "Access-Control-Allow-Origin": "*",
   "Access-Control-Allow-Headers":
-    "Authorization, Content-Type, X-Api-Key, X-Helius-Secret, X-Agent-Pass",
+    "Authorization, Content-Type, X-Api-Key, X-Helius-Secret, X-Agent-Pass, X-Stamp-Id",
     "Access-Control-Allow-Methods": "GET, HEAD, POST, OPTIONS",
   "Access-Control-Expose-Headers": "PAYMENT-REQUIRED, WWW-Authenticate",
 };
